# airbyte-agent-sdk

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: generate-skills.yml
airbyte-agent-mcp/: CHANGELOG.md  pyproject.toml
airbyte_agent_sdk/: __init__.py  ask.py  auth_strategies.py  cli.py  config.py  connect.py  connect.pyi  connector_model_loader.py  constants.py  exceptions.py  extensions.py  introspection.py  registry.py  types.py  workspace.py
airbyte_agent_sdk/cloud_utils/: client.py
airbyte_agent_sdk/codegen/: filters.py  generator.py
airbyte_agent_sdk/executor/: hosted_executor.py  local_executor.py  models.py
airbyte_agent_sdk/http/: __init__.py  exceptions.py
airbyte_agent_sdk/observability/: session.py
airbyte_agent_sdk/schema/: __init__.py  base.py  components.py  extensions.py  interpolation.py  openapi-connector-schema.yaml  operations.py  security.py
airbyte_agent_sdk/telemetry/: tracker.py
airbyte_agent_sdk/testing/: cassette_generator.py  runner.py
airbyte_agent_sdk/validation/: cache.py  readiness.py  replication.py
connectors/airtable/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/amazon-ads/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/amazon-seller-partner/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/amplitude/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/asana/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/ashby/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/chargebee/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/clickup-api/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/confluence/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/facebook-marketing/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/freshdesk/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/github/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/gitlab/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/gmail/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/gong/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/google-ads/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/google-analytics-data-api/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/google-drive/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/google-search-console/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/granola/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/greenhouse/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/harvest/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/hubspot/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/incident-io/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/intercom/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/jira/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/klaviyo/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/linear/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/linkedin-ads/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/mailchimp/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/monday/: AUTH.md  CHANGELOG.md  README.context.json  README.md  REFERENCE.md  pyproject.toml
connectors/notion/: AUTH.md  CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/orb/: AUTH.md  (+4 more)
scripts/: README-generate-skill-references.md  generate_skill_references.py
tests/: test_generate_skill_references.py
(+689 files in other folders)
